[tool.poetry]
name = "APproject"
version = "0.1.0"
description = ""
authors = ["V-Saikus <wowanos88@gmail.com>"]

[tool.poetry.dependencies]
python = "3.6.4"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
