[tool.poetry]
name = "APproject"
version = "0.1.0"
description = ""
authors = ["V-Saikus <wowanos88@gmail.com>"]

[tool.poetry.dependencies]
python = "3.6.4"
Flask = "^1.1.2"
psycopg2 = "^2.8.6"
Flask-Script = "^2.0.6"
Flask-SQLAlchemy = "^2.4.4"
Flask-Migrate = "^2.5.3"
Flask-JWT-Extended = "^3.25.0"
mysql-connector-python = "^8.0.22"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
